# club-course-manager

./: .gitignore  LICENSE  file.txt  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  db.rs  db_trait.rs  lib.rs  main.rs  mem_db.rs  models.rs  repo.rs  security.rs  services.rs
src/api/: backend.ts  course.ts  session.ts
src/components/account/: AccountEntry.vue  AccountLoginForm.vue  AccountProfilePage.vue  AccountProfilePanel.vue  AccountRegisterForm.vue  AuthDialog.vue  UserAvatar.vue
src/layout/: MainLayout.vue
src/modules/account/: avatar.ts  constants.ts  security.ts  service.ts  storage.ts  types.ts  useAccount.ts  useAccountAuthController.ts  useAccountProfileController.ts
src/modules/app-data/: service.ts  storage.ts  types.ts  useAppData.ts
src/modules/campus/: service.ts  storage.ts  types.ts
src/modules/clubCenter/: service.ts  storage.ts  types.ts
src/router/: index.ts
src/views/: AccountCenter.vue  Clubs.vue  Courses.vue  Enrollment.vue
